finished coding for ganache, playing in two tabs

--- a/appui/src/App.css
+++ b/appui/src/App.css
@@ -36,3 +36,50 @@
     transform: rotate(360deg);
   }
 }
+
+#game {
+  width: 300px;
+  height: 300px;
+  border: 1px solid #dadada;
+  margin: 0 auto;
+  padding: 0;
+  margin-bottom: 20px;
+}
+
+#game > li {
+  list-style: none;
+  float: left;
+  overflow: hidden;
+  text-decoration:none;
+  width: 100px;
+  height: 100px;
+  background: #f1f1f1;
+  border: 1px solid #ccc;
+  border-right: 1px solid #fff;
+  cursor: pointer;
+  text-transform: uppercase;
+  text-align: center;
+  padding-top: 20px;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+#game > li.x {
+  font-size: 40px;
+  color: #ed4e6e
+}
+
+#game > li.o {
+  font-size: 40px;
+  color: #485b6e;
+}
+
+#game > li:hover {
+  background: #f9f9f9;
+}
+
+#game > li:active {
+  width: 100px;
+  height: 100px;
+  border: 0;
+}
